--- a/BestarProject/ShoppingMall/res/layout/fragment_register_phone_check.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_register_phone_check.xml
@@ -35,7 +35,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/app_theme_color"
+            android:background="@color/line_mine_color"
             ></View>
         <TextView
             android:layout_width="wrap_content"
