--- a/BestarProject/ShoppingMall/res/layout/fragment_select_address.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_select_address.xml
@@ -17,7 +17,7 @@
         tools:ignore="UselessParent">
 
         <ImageButton
-            android:id="@+id/register_back"
+            android:id="@+id/addressBack"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:background="@null"
@@ -38,6 +38,7 @@
             android:layout_centerVertical="true"
             android:background="@null"
             android:padding="10dp"
+            android:id="@+id/completeBtn"
             android:src="@drawable/selector_comple" />
     </RelativeLayout>
     <View
@@ -55,6 +56,8 @@
         android:paddingBottom="10dp"
         android:textColor="@color/color_ffffff"
         android:visibility="gone"
+        android:textStyle="bold"
+        android:paddingRight="20dp"
         android:textSize="16sp" />
 
     <LinearLayout
@@ -110,5 +113,6 @@
         android:padding="10dp"
         android:layout_margin="20dp"
         android:textColor="#666"
+        android:id="@+id/inputAddressEt"
         ></EditText>
 </LinearLayout>
