--- a/BestarProject/ShoppingMall/res/layout/fragment_my_collect.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_my_collect.xml
@@ -64,6 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/app_bg_color"
+            android:visibility="gone"
             android:padding="16dp">
 
             <CheckBox
