修改一些小逻辑，主要把用户信息保存为单例数据

--- a/BestarProject/ShoppingMall/res/layout/fragment_forget_password.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_forget_password.xml
@@ -49,7 +49,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/app_theme_color"
+            android:background="@color/line_mine_color"
             ></View>
         <TextView
             android:layout_width="wrap_content"
@@ -85,6 +85,7 @@
                 android:gravity="center|left"
                 android:hint="请输入手机号码"
                 android:textColorHint="#afafaf"
+                android:maxLength="11"
                 android:inputType="phone"
                 android:singleLine="true"
                 android:textSize="16sp" />
